--- a/WenElevating.Todo/WenElevating.Todo.csproj
+++ b/WenElevating.Todo/WenElevating.Todo.csproj
@@ -27,6 +27,7 @@
     <Folder Include="Models\" />
     <Folder Include="ViewModels\" />
     <Folder Include="Views\" />
+    <Folder Include="Commons\" />
   </ItemGroup>
 
   <ItemGroup>
