--- a/WenElevating.Todo/WenElevating.Todo.csproj
+++ b/WenElevating.Todo/WenElevating.Todo.csproj
@@ -20,7 +20,9 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-preview.1.25080.5" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0-preview.1.25080.5" />
+    <PackageReference Include="Sentry" Version="5.2.0" />
+    <PackageReference Include="Sentry.Profiling" Version="5.2.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,7 +32,6 @@
   <ItemGroup>
     <Folder Include="Services\Impl\" />
     <Folder Include="Models\" />
-    <Folder Include="ViewModels\" />
     <Folder Include="Views\" />
     <Folder Include="Commons\" />
   </ItemGroup>
