--- a/WenElevating.Todo/WenElevating.Todo.csproj
+++ b/WenElevating.Todo/WenElevating.Todo.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Models\" />
     <Folder Include="Services\Impl\" />
     <Folder Include="Views\" />
     <Folder Include="Commons\" />
