Feat：增加Core项目用于存放与UI关联度不高的服务，并将Win32支持移植Core项目

--- a/WenElevating.Todo/WenElevating.Todo.csproj
+++ b/WenElevating.Todo/WenElevating.Todo.csproj
@@ -30,6 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WenElevating.Core\WenElevating.Core.csproj" />
     <ProjectReference Include="..\WenElevating.Resources\WenElevating.Resources.csproj" />
   </ItemGroup>
 
