--- a/WenElevating.Core/WenElevating.Core.csproj
+++ b/WenElevating.Core/WenElevating.Core.csproj
@@ -17,4 +17,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Utilites\" />
+  </ItemGroup>
+
 </Project>
