--- a/WenElevating.Todo/appsettings.json
+++ b/WenElevating.Todo/appsettings.json
@@ -1,7 +1,8 @@
 {
     "Settings": {
-        "KeyOne": 1,
-        "KeyTwo": true,
+        "Version": "0.0.0.0",
+        "MaximumMemoryUsage": 500,
+        "MemoryMonitorInterval": 60,
         "KeyThree": {
             "Message": "Oh, that's nice...",
             "SupportedVersions": {
