--- a/WenElevating.Todo/appsettings.json
+++ b/WenElevating.Todo/appsettings.json
@@ -3,6 +3,7 @@
         "Version": "0.0.0.0",
         "MaximumMemoryUsage": 500,
         "MemoryMonitorInterval": 60,
+        "LogType": 0, // 0: Console, 1: File, 2: ConsoleAndFile
         "KeyThree": {
             "Message": "Oh, that's nice...",
             "SupportedVersions": {
