Update：引入本地化配置，解决全局配置导入失败问题

--- a/WenElevating.Todo/appsettings.json
+++ b/WenElevating.Todo/appsettings.json
@@ -4,19 +4,14 @@
         "MaximumMemoryUsage": 500,
         "MemoryMonitorInterval": 60,
         "LogType": 2, // 0: Console, 1: File, 2: ConsoleAndFile
-        "KeyThree": {
-            "Message": "Oh, that's nice...",
-            "SupportedVersions": {
-                "v1": "1.0.0",
-                "v3": "3.0.7"
-            }
-        },
-        "IPAddressRange": [
-            "46.36.198.121",
-            "46.36.198.122",
-            "46.36.198.123",
-            "46.36.198.124",
-            "46.36.198.125"
+        "NoteClassification": [
+            "All",
+            "Today",
+            "Tomorrow",
+            "LastSevenDays",
+            "Assigned",
+            "Collect",
+            "Summary"
         ]
     }
 }
