--- a/WenElevating.Todo/WenElevating.Todo.csproj
+++ b/WenElevating.Todo/WenElevating.Todo.csproj
@@ -11,8 +11,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <EmbeddedResource Remove="Assets\Resources.en-US.resx" />
+    <EmbeddedResource Remove="Assets\Resources.zh-CN.resx" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Assets\avatar.jpg" />
     <None Remove="Assets\Power.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <CodeAnalysisDictionary Include="Assets\Resources.zh-CN.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.CN.Designer.cs</LastGenOutput>
+    </CodeAnalysisDictionary>
   </ItemGroup>
 
   <ItemGroup>
@@ -29,6 +41,7 @@
     </PackageReference>
     <PackageReference Include="Sentry" Version="5.2.0" />
     <PackageReference Include="Sentry.Profiling" Version="5.2.0" />
+    <PackageReference Include="WPFLocalizeExtension" Version="3.10.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -38,7 +51,6 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\Impl\" />
-    <Folder Include="Models\" />
     <Folder Include="Utilties\" />
     <Folder Include="Views\" />
   </ItemGroup>
@@ -46,6 +58,7 @@
   <ItemGroup>
     <Resource Include="Assets\avatar.jpg" />
     <Resource Include="Assets\Power.png" />
+    <Resource Include="Assets\Resources.en-US.resx" />
   </ItemGroup>
 
   <ItemGroup>
