--- a/WenElevating.Todo/appsettings.json
+++ b/WenElevating.Todo/appsettings.json
@@ -12,6 +12,8 @@
             "Assigned",
             "Collect",
             "Summary"
-        ]
+        ],
+        "DataBase": 1, // 0: Sqlite, 1: SqlServer, 2: Mysql
+        "ConnectionString": "Data Source=.\\DataBases\\Todo.db; Pooling=true;Min Pool Size=1"
     }
 }
