--- a/WenElevating.Resources/WenElevating.Resources.csproj
+++ b/WenElevating.Resources/WenElevating.Resources.csproj
@@ -26,7 +26,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="WebViews\" />
+    <PackageReference Include="AvalonEdit" Version="6.3.1.120" />
+    <PackageReference Include="Markdig" Version="0.41.2" />
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3344-prerelease" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="WebViews\Markdown.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
