--- a/WenElevating.Todo/appsettings.json
+++ b/WenElevating.Todo/appsettings.json
@@ -14,6 +14,11 @@
             "Summary"
         ],
         "DataBase": 1, // 0: Sqlite, 1: SqlServer, 2: Mysql
-        "ConnectionString": "Data Source=.\\DataBases\\Todo.db; Pooling=true;Min Pool Size=1"
+        "ConnectionString": "Data Source=.\\DataBases\\Todo.db; Pooling=true;Min Pool Size=1",
+        "ArchivedCollection": [
+            "IsCompleted",
+            "IsAbandon",
+            "TrashBox"
+        ]
     }
 }
